# Scholar-Alert-Extractor

./: .env.example  .gitignore  README.md  pyproject.toml
config/: sources.yaml
docs/: PLAN.md
scholar_alerts/: __init__.py  __main__.py  cli.py  config.py  dedup.py  excel_store.py  imap_client.py  logging_config.py  mime_parser.py  models.py  normalizers.py  processor.py  source_detector.py
scholar_alerts/parsers/: __init__.py  base.py  google_scholar.py  ieee_author_alert.py
skill-dist/filter-doa-array-papers/: SKILL.md
skill-dist/filter-doa-array-papers/agents/: openai.yaml
skill-dist/filter-doa-array-papers/references/: relevance-rubric.md
skill-dist/filter-doa-array-papers/scripts/: filter_papers.py
tests/: __init__.py  conftest.py  helpers.py  test_config.py  test_dedup.py  test_excel_store.py  test_google_scholar_parser.py  test_ieee_parser.py  test_imap_client.py  test_logging_config.py  test_mime_parser.py  test_normalizers.py  test_processor.py  test_source_detector.py
tests/fixtures/google_scholar/: sample_multi.eml
tests/fixtures/ieee/: sample_author_alert.eml
