[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scholar-alert-extractor"
version = "0.1.0"
description = "Safely extract Google Scholar and IEEE Author Alert emails into Excel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "imapclient>=3,<4",
  "openpyxl>=3.1,<4",
  "python-dotenv>=1,<2",
  "PyYAML>=6,<7",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.5,<1"]

[project.scripts]
scholar-alerts = "scholar_alerts.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["scholar_alerts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

